# tl-search

./: Cargo.toml  LICENSE  README.md
assets/: dict.small.txt
src/: lib.rs
